<resources>
    <string name="app_name">APPEMPV</string>

    <string name="member3">Perez Valdez Edgar Michael</string>

    <string name="btnBack">Back</string>
    <string name="btnExit">Exit</string>
    <string name="btnActivity">Launch activity</string>

    <string name="sign_up_error_name">Required field</string>
    <string name="sign_up_error_lastname">Required field</string>
    <string name="sign_up_error_email">Required field or incorrect format</string>
    <string name="sign_up_error_password">Required field</string>
    <string name="cb_sign_in_single_text">Are you single?</string>
    <string name="et_sign_in_name">Enter name</string>
    <string name="iv_sign_up">Sign up icon</string>
    <string name="et_sign_in_lastname">Enter last name</string>
    <string name="et_sign_in_email">Enter email</string>
    <string name="et_sign_in_password">Enter password</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="tv_sign_up_devices_title">Electric devices</string>

    <string name="log_in_error_email">Required field or incorrect format</string>
    <string name="log_in_error_password">Required field</string>
    <string name="log_in_email">Enter email</string>
    <string name="et_log_in_password">Enter password</string>
    <string name="btnLogIn">Log in</string>
    <string name="tv_go_sign_in">Don\'t have an account?"</string>

    <string name="final_exercise_home_title">Welcome %s!</string>
    <string name="final_exercise_home_title_no_name">Welcome</string>
    <string name="final_exercise_home_title_tv_single">Your civil status is single</string>
    <string name="final_exercise_home_title_tv_not_single">Your civil status is not single</string>
    <string name="final_exercise_home_title_login_info">Login information</string>"
    <string name="final_exercise_tv_email_title">Email:</string>
    <string name="final_exercise_tv_password_title">Password:</string>
    <string name="final_exercise_about_you_title">About you</string>
    <string name="final_exercise_tv_lastname_title">Lastname:</string>
    <string name="final_exercise_tv_devices_title">Devices:</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>